--- a/src/index.css
+++ b/src/index.css
@@ -165,4 +165,46 @@
   .form-ui #form-actions-notice {
     @apply text-center first-letter:capitalize my-3;
   }
+  /*Image UI*/
+  #image-ui {
+    @apply mx-auto p-3 bg-color-pri/80;
+  }
+  #image-ui #viewer {
+    @apply w-fit mx-auto flex mb-4;
+  }
+  #image-ui-buttons {
+    @apply w-fit mx-auto;
+  }
+  #image-ui .image-previewer-container {
+    @apply relative inline-block mx-auto;
+  }
+  #image-ui .image-previewer-title {
+    @apply absolute -bottom-2 text-center bg-color-def/50;
+  }
+  #image-ui #image-selected-remover,
+  #image-ui-library-delete-button {
+    @apply absolute top-0 right-0 bg-color-ter text-color-def border-0 rounded-none m-0;
+  }
+  #image-ui .image-ui-title {
+    @apply relative mt-2 px-5 flex items-center;
+  }
+  #image-ui .image-ui-title label {
+    @apply absolute left-1 z-10;
+  }
+  #image-ui .image-ui-title input {
+    @apply pl-8 rounded-full;
+  }
+
+  .image-ui-library {
+    @apply relative;
+  }
+  .image-ui-library label {
+    @apply cursor-pointer;
+  }
+  .image-ui-library input[type="radio"] {
+    @apply absolute left-0 top-0 m-2 cursor-pointer;
+  }
+  #image-ui-select-button {
+    @apply bg-color-def;
+  }
 }
